--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -10,10 +10,10 @@
                 <a class="nav-link" routerLink="home" routerLinkActive="active">Home</a>
             </li>
 
-            <li class="nav-item" *ngIf="userSerVice.getLogInStatus()">
+            <li class="nav-item" *ngIf="userService.getLogInStatus()">
                 <a class="nav-link" routerLink="cart" routerLinkActive="active">Cart <span id="items-in-cart">{{cartService.cartItemsCount | limit}}</span></a>
             </li>
-            <li class="nav-item" *ngIf="userSerVice.getLogInStatus()">
+            <li class="nav-item" *ngIf="userService.getLogInStatus()">
                 <a class="nav-link" routerLink="order" routerLinkActive="active">Orders</a>
             </li>
 
@@ -24,12 +24,12 @@
                 <a class="nav-link" routerLink="about" routerLinkActive="active">About Us</a>
             </li>
             <li class="nav-item">
-                <div *ngIf="!userSerVice.getLogInStatus();else hello">
+                <div *ngIf="!userService.getLogInStatus();else hello">
                     <a class="nav-link" routerLink="login" routerLinkActive="active">Login</a>
                 </div>
                 <ng-template #hello>
                     <div class="dropdown">
-                        <a id="logout" class="nav-link" role="button" data-toggle="dropdown">Hello {{userSerVice.getName()}}</a>
+                        <a id="logout" class="nav-link" role="button" data-toggle="dropdown">Hello {{userService.getName()}}</a>
                         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="logout">
                             <a class="dropdown-item" role="button" (click)="logoutBtnClickEventHandler();">Log Out</a>
                         </div>
