--- a/client/src/app/components/home/home.component.css
+++ b/client/src/app/components/home/home.component.css
@@ -41,6 +41,6 @@ a{
     text-align: left !important;
     /* padding-left: 5px; */
 }
-.card:hover{
+#filters .card:hover{
     box-shadow: none !important;
 }
