--- a/client/src/app/components/home/home.component.html
+++ b/client/src/app/components/home/home.component.html
@@ -167,7 +167,7 @@
             <div class="row">
                 <div class="card-group mx-auto">
                     <div class="col-md-3 p-0 d-flex" *ngFor="let product of products">
-                        <div class="card p-0 m-2 bg-light">
+                        <div class="card w-100 p-0 m-2 bg-light">
                             <a href="javascript:void(0)" data-toggle="tooltip" title="{{product.title}}"
                                 data-toggle="modal" data-target="#product-details"
                                 (click)="displayProductDetails(product)">
